# Wavy-Draw

./: Wavy-Draw.cabal
Data/Sound/: Draw.hs
examples/: sine.hs  sine2.hs
